--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>enkiApp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -20,6 +21,9 @@
     <!-- endbuild -->
   </head>
   <body>
+  <script>
+  var myDataRef = new Firebase('https://enkibot.firebaseio.com');
+  </script>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
