1. demo version + with fixed deck shuffle function in second round

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
   <body>
   <script>
   var myDataRef = new Firebase('https://enkibot.firebaseio.com');
+  var fredRef = new Firebase("https://enkibot.firebaseio.com/users/00dde272-d7a8-4a41-99ac-92133f54aafa");
   </script>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
