--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <title>enkiApp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+
+
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
@@ -22,8 +23,8 @@
   </head>
   <body>
   <script>
-  var myDataRef = new Firebase('https://enkibot.firebaseio.com');
-  var fredRef = new Firebase("https://enkibot.firebaseio.com/users/00dde272-d7a8-4a41-99ac-92133f54aafa");
+  // var myDataRef = new Firebase('https://enkibot.firebaseio.com');
+  // var fredRef = new Firebase("https://enkibot.firebaseio.com/users/00dde272-d7a8-4a41-99ac-92133f54aafa");
   </script>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -47,6 +48,11 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
+
+    <!-- Firebase -->
+    <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
 
   </body>
 </html>
