--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>enkiApp</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-
+    <link rel="stylesheet" href="app/components/memoGame/memoGame.css">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
